fixed link not covering entire box

--- a/repo-layout/css/link.css
+++ b/repo-layout/css/link.css
@@ -8,13 +8,17 @@
 
 li.link-inner {
 	display: inline-block;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
+}
+
+a.link-inner {
+	display: block;
+	height: 47px;
 }
 
 .link-inner > div {
 	display: inline-block;
 	width: 100%;
+	height: 100%;
 }
 
 .link-inner > div > label {
@@ -24,8 +28,9 @@ li.link-inner {
 
 img.icon {
 	height: auto;
-	/* XXX: small differences due to font bugs */
+	/* XXX: small differences due to font bugs 
 	margin: -7px 6px -9px 5px; /*June*/
+	margin: 8px 6px -9px 5px; /*June*/
 	max-height: 30px;
 	min-width: 30px;
 	width: 30px;
@@ -37,6 +42,9 @@ p {
 
 .link {
 	text-align: left;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	vertical-align: middle;
 }
 
 .repo-link {
@@ -106,6 +114,7 @@ ul.is-unsupported:after, ul.is-unsupported:before {
 	font-family: Arial, -apple-system-font;
 	font-weight: normal;
 	color: #8e8e9f !important;
+	margin-top: 15px; /*June*/
 }
 
 /*
